# snailDB

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: feature.yml
.github/workflows/: build.yml  release.yml
snailctl/: Cargo.toml
snaildb/: Cargo.toml
snaildb/src/engine/: lsm.rs  memtable.rs  mod.rs
snaildb/src/storage/: sstable.rs
snaildb/src/utils/: mod.rs  record.rs
snaildb/src/wal/: db_sync.rs  enums.rs  mod.rs  wal.rs
snaildb/tests/: usage.rs  wal.rs
src/utils/: record.rs
