[package]
name = "snaildb"
version = "0.1.0"
edition = "2024"
default-run = "snaildb"

[dependencies]
anyhow = "1.0"
axum = "0.8.7"
crc32fast = "1.4"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.41", features = ["macros", "rt-multi-thread", "net", "sync"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossbeam-skiplist = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
