[package]
name = "snaildb"
version.workspace = true
edition.workspace = true
description = "An embedded, persistent key-value store with high write throughput and durability"
readme = "../README.md"
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow = "1.0"
crc32fast = "1.4"
crossbeam-skiplist = "0.1"
tracing = "0.1"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }

[dev-dependencies]
tempfile = "3.10"
